# rtsp-streaming-server

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MP4_SEGMENT_STREAMING_DESIGN.md  README.md  README_API.md  README_MP4.md  config-example.toml  config-postgres-example.json  config-postgres-shared-example.json  config.json  config.toml  config.toml.backup  hls_hourly_stats.sql  mp4_hourly_stats.sql  prompt.md  release.sh  storage_queries.sql  timerange?t1=2026-01-13T10:08:54.389Z&t2=2026-01-13T10:22:57.587Z&session_id=2  version.txt  wget-log
cameras/: cam1.json  cam1.toml  cam2.json  cam2.toml  cam3.json  cam3.toml  cam4.json  cam4.toml
certs/: ca.crt  ca.key  ca.srl  server.crt  server.key
cwc/: README.md  build.sh
cwc/src/: manifest.json
cwc/src/control/: code.js  index.html
homepage/: README.md  index.html  script.js  styles.css
releases/: v1.0.10.txt  v1.0.11.txt  v1.0.2.txt  v1.0.3.txt  v1.0.4.txt  v1.0.5.txt  v1.0.6.txt  v1.0.7.txt  v1.0.8.txt  v1.0.9.txt
src/: api.rs  api_config.rs  api_export.rs  api_ptz.rs  api_recording.rs  builders.rs  cached_frame_stream.rs  camera_manager.rs  config.rs  control.rs  database.rs  errors.rs  export_jobs.rs  frame_cache.rs  handlers.rs  main.rs  mp4.rs  mqtt.rs  pre_recording_buffer.rs  ptz.rs  recording.rs  rtsp_client.rs  throughput_tracker.rs  transcoder.rs  utils.rs  video_stream.rs  watcher.rs  websocket.rs  websocket_control.rs  websocket_handler.rs
src/api/: mod.rs
static/: admin.html  control.html  dark-theme.css  dashboard-admin.html  dashboard.html  dashboard.js  debug.html  index.html  index_mjpeg.html  stream.html  test.html
