[package]
name = "rtsp-streaming-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Web server and WebSocket
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-tungstenite = "0.27"
futures-util = "0.3"
url = "2.5"

# RTSP handling
retina = "0.4"

# Image processing
image = { version = "0.25", features = ["jpeg"] }
bytes = "1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async channels
tokio-stream = "0.1"

# MQTT
rumqttc = "0.24"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Command line argument parsing
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
async-trait = "0.1"

# Socket configuration
socket2 = "0.6"

# File watching
notify = "8.2"

# YAML support for config files (optional, keeping TOML as well)
serde_yaml = "0.9"

# System information
gethostname = "1.0"